--- a/frontend/app/views/login.html
+++ b/frontend/app/views/login.html
@@ -1,5 +1,9 @@
 <form name="loginForm" novalidate ng-submit="login()" >
 
+<div class ="alert alert-danger" ng-show="wrongCredentials">
+	Wrong credentials
+</div>	
+
 	<div class="form-group" ng-class="{'has-error' : loginForm.email.$invalid && loginForm.email.$dirty, 'has-success':loginForm.email$vaild && loginForm.email.$dirty}">
 
 	<label for="">Email</label>
