cant see button when logged out now

--- a/frontend/app/views/spaces/index.html
+++ b/frontend/app/views/spaces/index.html
@@ -1,8 +1,9 @@
 
-
-<form id="logout" ng-show="isLoggedIn" ng-click="logout()">
+<div ng-show="isLoggedIn()">
+<form id="logout"  ng-click="logout()">
 <input type="submit" value="Logout" ></input>
-</form> 	
+</form> 
+</div>	
  
 <h3> Space Details: </h3> 
 
